--- a/about.html
+++ b/about.html
@@ -24,12 +24,11 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="digital-progymnasmata"><a href="progym.html">Digital
-Progymnasmata</a></h5>
-<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without
-Ceasing</a></h5>
-<h5 id="selected-publications-appearances"><a href="index.html">Selected
-Publications &amp; Appearances</a></h5>
+<h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
+<h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
+<!-- ##### [To Pray Without Ceasing](topray.html)
+ -->
+<h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
 <h5 id="about"><a href="about.html">About*</a></h5>
 <hr />
 <p>Assistant Professor, Dept. of English, UConn, Storrs</p>
@@ -41,8 +40,6 @@ Publications &amp; Appearances</a></h5>
 <p>Researching digital literacies</p>
 <p>&amp;</p>
 <p>Computer-generated &amp; -mediated literature</p>
-<h6 id="site-made-with-pandocmarkdown"><a
-href="https://github.com/kbooten/kbooten.github.io" target="_blank">site
-made with pandoc+markdown</a></h6>
+<h6 id="site-made-with-pandocmarkdown"><a href="https://github.com/kbooten/kbooten.github.io" target="_blank">site made with pandoc+markdown</a></h6>
 </div></body>
 </html>
