--- a/noohacking.html
+++ b/noohacking.html
@@ -24,21 +24,14 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
+<h5 id="noöhacking"><a href="noohacking.html">Noöhacking*</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
-<!-- ##### [To Pray Without Ceasing*](topray.html)
+<!-- ##### [To Pray Without Ceasing](topray.html)
  -->
 <h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>To Pray Without Ceasing is a text generation project about caring for strangers online. The algorithmic system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates empathetic prayers specific to these needs. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, it never grows weary of paying attention to others.</p>
-<p>I completed To Pray Without Ceasing while the Fall 2020 poet-in-residence at Nokturno.fi.</p>
-<ul>
-<li><a href="https://www.topraywithoutceasing.com/" target="_blank">To Pray Without Ceasing</a></li>
-<li><a href="https://github.com/kbooten/topraywithoutceasing" target="_blank">Code</a></li>
-<li><a href="http://residence6.nokturno.fi/" target="_blank">Residence diary</a></li>
-<li><a href="https://2021.xcoax.org/kbo/">xCoAx 2021</a></li>
-<li><a href="https://eliterature.org/elo2021/posthuman/" target="_blank">ELO/SLSA 2021 “Posthuman” Exhibition</a></li>
-</ul>
+<p><em>Noöhacking</em> is the title of my current research program. I use this term for ways that artists and everyday digital media users build and repurpose algorithmic tools in order to take care of their own minds/spirits, an especially challenging and important task amidst a digital millieu that seems designed to make us alienated, unintelligent, and miserable.</p>
+<p>My current book-in-progress—also called <em>Noöhacking</em>—describes some of the key technologies through which an individual can engage in this practice, including browser extensions, social media bots, algorithmic writing-assistants, and mind-mapping tools. This book also theorizes some of the ways that current educational instutions can support their endeavor, and it describes some of my own attempts to “hack” my own “noos,” including my <a href="progym.html">word-gyms that try to make writing (beneficially) harder</a> and my <a href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/" target="_blank">browser extension that attempts to “re-hijack” my scattered attention</a>.</p>
 </div></body>
 </html>
