--- a/progym.html
+++ b/progym.html
@@ -24,51 +24,40 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="digital-progymnasmata"><a href="progym.html">Digital
-Progymnasmata*</a></h5>
-<h5 id="to-pray-without-ceasing"><a href="topray.html">To Pray Without
-Ceasing</a></h5>
-<h5 id="selected-publications-appearances"><a href="index.html">Selected
-Publications &amp; Appearances</a></h5>
+<h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
+<h5 id="word-gyms"><a href="progym.html">Word-Gyms*</a></h5>
+<!-- ##### [To Pray Without Ceasing](topray.html)
+ -->
+<h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><em>Progymnasmata</em> were classical rhetorical exercises meant to
-train the mind just as physical exercises train the body. <em>Digital
-Progymasmata</em> is a project that investigates the ways that Natural
-Language Processing can be integrated into tools and games that re-train
-linguistic faculties. It is an example of Digital Humanities research
-for the development of “noötechnics” (B. Stiegler).</p>
-<p>A preliminary paper can be found in the <a
-href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15"
-target="_blank">proceedings of the ICCC (2019)</a>. Examples of digital
-progymnasmata include:</p>
+<p><em>Progymnasmata</em> were classical rhetorical exercises meant to train the mind just as physical exercises train the body. <em>Word-Gyms</em> is a project that investigates the ways that Natural Language Processing can be integrated into tools and games that re-train linguistic faculties. It is an example of Digital Humanities research for the development of “noötechnics” (Bernard Stiegler).</p>
+<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>. Examples of digital progymnasmata include:</p>
 <ul>
-<li><a href="https://github.com/kbooten/stylevise"
-target="_blank">Style🗜Vise</a>
+<li><a href="https://github.com/kbooten/lotuschorusworkshop" target="_blank">Lotus Chorus Workshop</a>
 <ul>
-<li><a href="https://www.flusserstudies.net/person/kyle-booten"
-target="_blank">paper</a></li>
+<li><a href="https://2023.xcoax.org/pdf/booten.pdf">paper</a></li>
 </ul></li>
-<li><a href="https://github.com/kbooten/manualstyletransfer"
-target="_blank">Manual Style Transfer</a></li>
-<li><a href="https://github.com/kbooten/alternatingcurrent"
-target="_blank">Alternating Current</a>
+<li><a href="https://github.com/kbooten/ekphrasisgym" target="_blank">Ekphrasis Gym</a></li>
+<li><a href="https://github.com/kbooten/lowphreak" target="_blank">Low Phreak</a></li>
+<li><a href="https://github.com/kbooten/allusion_injector" target="_blank">Allusion Injector</a></li>
+<li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>
 <ul>
-<li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten"
-target="_blank">poetic essay</a></li>
-<li><a
-href="https://electronicbookreview.com/essay/making-writing-harder-computer-mediated-authorship-and-the-problem-of-care/"
-target="_blank">paper</a></li>
+<li><a href="https://www.flusserstudies.net/person/kyle-booten" target="_blank">paper</a></li>
 </ul></li>
-<li><a href="https://github.com/kbooten/ekphrasisgym"
-target="_blank">Ekphrasis Gym</a></li>
-<li><a href="https://github.com/kbooten/lotuschorusworkshop"
-target="_blank">Lotus Chorus Workshop</a>
+<li><a href="https://github.com/kbooten/manualstyletransfer" target="_blank">Manual Style Transfer</a></li>
+<li><a href="https://github.com/kbooten/alternatingcurrent" target="_blank">Alternating Current</a>
 <ul>
-<li>paper forthcoming</li>
+<li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">poetic essay</a></li>
+<li><a href="https://electronicbookreview.com/essay/making-writing-harder-computer-mediated-authorship-and-the-problem-of-care/" target="_blank">paper</a></li>
 </ul></li>
-<li><a href="https://github.com/kbooten/lowphreak" target="_blank">Low
-Phreak</a></li>
+<li><a href="https://taper.badquar.to/2/parapraxis_mirror.html">Parapraxis Mirror</a></li>
+</ul>
+<p>I have presented on some of these word-gyms (and their attendant slogan: “Make writing harder!”) at venues including:</p>
+<ul>
+<li>“AI FUTURES” (roundtable via Critical AI @ Rutgers, 2023)</li>
+<li>Ammerman Symposium 2022</li>
+<li>“The Anxiety of the Computational” (symposium at the Santa Fe Institute, 2022)</li>
 </ul>
 </div></body>
 </html>
