--- a/about.html
+++ b/about.html
@@ -8,10 +8,15 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="false" />
@@ -26,10 +31,12 @@
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
-<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes</a></h5>
+<h5 id="salon-des-fantômes"><a href="salon.html">Salon des
+Fantômes</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
-<h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
+<h5 id="selected-publications"><a href="index.html">Selected
+Publications</a></h5>
 <h5 id="about"><a href="about.html">About*</a></h5>
 <hr />
 <p>Assistant Professor, Dept. of English, UConn, Storrs</p>
@@ -38,9 +45,11 @@
 <p>2016 Spencer/NAEd Dissertation Fellow</p>
 <p>M.F.A., University of Michigan, Ann Arbor</p>
 <p>A.B., Princeton University</p>
-<p>Researching digital literacies</p>
-<p>&amp;</p>
-<p>Computer-generated &amp; -mediated literature</p>
-<h6 id="site-made-with-pandocmarkdown"><a href="https://github.com/kbooten/kbooten.github.io" target="_blank">site made with pandoc+markdown</a></h6>
+<p><br><br />
+Researching the algorithmic mediation of thought, especially poetic
+thought</p>
+<h6 id="site-made-with-pandocmarkdown"><a
+href="https://github.com/kbooten/kbooten.github.io" target="_blank">site
+made with pandoc+markdown</a></h6>
 </div></body>
 </html>
