--- a/noohacking.html
+++ b/noohacking.html
@@ -8,10 +8,15 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="false" />
@@ -26,13 +31,30 @@
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking*</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
-<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes</a></h5>
+<h5 id="salon-des-fantômes"><a href="salon.html">Salon des
+Fantômes</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
-<h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
+<h5 id="selected-publications"><a href="index.html">Selected
+Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><em>Noöhacking</em> is the title of my current research program. I use this term for ways that artists and everyday digital media users build and repurpose algorithmic tools in order to take care of their own minds/spirits, an especially challenging and important task amidst a digital milieu that seems designed to make us alienated, unintelligent, and miserable.</p>
-<p>My current book-in-progress—also called <em>Noöhacking</em>—describes some of the key technologies through which an individual can engage in this practice, including browser extensions, social media bots, algorithmic writing assistants, and mind-mapping tools. This book also theorizes some of the ways that current educational institutions can support their endeavor, and it describes some of my own attempts to “hack” my own “noos,” including my <a href="progym.html">word-gyms that try to make writing (beneficially) harder</a> and my <a href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/" target="_blank">browser extension that attempts to “re-hijack” my scattered attention</a>.</p>
+<p><em>Noöhacking</em> is the title of my current research program. I
+use this term for ways that artists and everyday digital media users
+build and repurpose algorithmic tools in order to take care of their own
+minds/spirits, an especially challenging and important task amidst a
+digital milieu that seems designed to make us alienated, unintelligent,
+and miserable.</p>
+<p>My current book-in-progress—also called <em>Noöhacking</em>—describes
+some of the key technologies through which an individual can engage in
+this practice, including browser extensions, social media bots,
+algorithmic writing assistants, and mind-mapping tools. This book also
+theorizes some of the ways that current educational institutions can
+support their endeavor, and it describes some of my own attempts to
+“hack” my own “noos,” including my <a href="progym.html">word-gyms that
+try to make writing (beneficially) harder</a> and my <a
+href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/"
+target="_blank">browser extension that attempts to “re-hijack” my
+scattered attention</a>.</p>
 </div></body>
 </html>
