--- a/progym.html
+++ b/progym.html
@@ -8,10 +8,15 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="false" />
@@ -26,42 +31,81 @@
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms*</a></h5>
-<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes</a></h5>
+<h5 id="salon-des-fantômes"><a href="salon.html">Salon des
+Fantômes</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
-<h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
+<h5 id="selected-publications"><a href="index.html">Selected
+Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><em>Progymnasmata</em> were classical rhetorical exercises meant to train the mind just as physical exercises train the body. <em>Word-Gyms</em> is a project that investigates the ways that Natural Language Processing can be integrated into tools and games that re-train linguistic faculties. It is an example of Digital Humanities research for the development of “noötechnics” (Bernard Stiegler).</p>
-<p>A preliminary paper can be found in the <a href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15" target="_blank">proceedings of the ICCC (2019)</a>. Examples of digital progymnasmata include:</p>
+<p><em>Progymnasmata</em> were classical rhetorical exercises meant to
+train the mind just as physical exercises train the body.
+<em>Word-Gyms</em> is a project that investigates the ways that Natural
+Language Processing can be integrated into tools and games that re-train
+linguistic faculties. It is an example of Digital Humanities research
+for the development of “noötechnics” (Bernard Stiegler).</p>
+<p>A preliminary paper can be found in the <a
+href="http://computationalcreativity.net/iccc2019/assets/iccc_proceedings_2019.pdf#page=15"
+target="_blank">proceedings of the ICCC (2019)</a>. Examples of digital
+progymnasmata include:</p>
 <ul>
-<li><a href="https://github.com/kbooten/lotuschorusworkshop" target="_blank">Lotus Chorus Workshop</a>
+<li><a href="https://github.com/kbooten/lotuschorusworkshop"
+target="_blank">Lotus Chorus Workshop</a>
 <ul>
-<li><a href="https://2023.xcoax.org/pdf/booten.pdf" target="_blank">paper</a></li>
+<li><a href="https://2023.xcoax.org/pdf/booten.pdf"
+target="_blank">paper</a></li>
+<li><a
+href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issues-21-28/issue-28"
+target="_blank">poems</a></li>
 </ul></li>
-<li><a href="https://github.com/kbooten/ekphrasisgym" target="_blank">Ekphrasis Gym</a></li>
-<li><a href="https://github.com/kbooten/lowphreak" target="_blank">Low Phreak</a></li>
-<li><a href="https://github.com/kbooten/allusion_injector" target="_blank">Allusion Injector</a>
+<li><a href="salon.html"><em>Salon des Fantômes</em></a></li>
+<li><a href="https://github.com/kbooten/ekphrasisgym"
+target="_blank">Ekphrasis Gym</a></li>
+<li><a href="https://github.com/kbooten/allusion_injector"
+target="_blank">Allusion Injector</a>
 <ul>
-<li><a href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31" target="_blank">poems</a></li>
+<li><a
+href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31"
+target="_blank">poems</a></li>
 </ul></li>
-<li><a href="https://github.com/kbooten/stylevise" target="_blank">Style🗜Vise</a>
+<li><a href="https://github.com/kbooten/stylevise"
+target="_blank">Style🗜Vise</a>
 <ul>
-<li><a href="https://www.flusserstudies.net/person/kyle-booten" target="_blank">paper</a></li>
+<li><a href="https://www.flusserstudies.net/person/kyle-booten"
+target="_blank">paper</a></li>
 </ul></li>
-<li><a href="https://github.com/kbooten/manualstyletransfer" target="_blank">Manual Style Transfer</a></li>
-<li><a href="https://github.com/kbooten/alternatingcurrent" target="_blank">Alternating Current</a>
+<li><a href="https://github.com/kbooten/pindar_horace_hordar"
+target="_blank">Pindar Horace Hordar</a></li>
+<li><a href="https://github.com/kbooten/manualstyletransfer"
+target="_blank">Manual Style Transfer</a></li>
+<li><a href="https://github.com/kbooten/lowphreak" target="_blank">Low
+Phreak</a></li>
+<li><a href="https://github.com/kbooten/alternatingcurrent"
+target="_blank">Alternating Current</a>
 <ul>
-<li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten" target="_blank">poetic essay</a></li>
-<li><a href="https://electronicbookreview.com/essay/making-writing-harder-computer-mediated-authorship-and-the-problem-of-care/" target="_blank">paper</a></li>
+<li><a href="https://www.tentacularmag.com/issue-4a/kyle-booten"
+target="_blank">poetic essay</a></li>
+<li><a
+href="https://electronicbookreview.com/essay/making-writing-harder-computer-mediated-authorship-and-the-problem-of-care/"
+target="_blank">paper</a></li>
 </ul></li>
-<li><a href="https://taper.badquar.to/2/parapraxis_mirror.html">Parapraxis Mirror</a></li>
+<li><a
+href="https://taper.badquar.to/2/parapraxis_mirror.html">Parapraxis
+Mirror</a>
+<ul>
+<li>poems in DENVER QUARTERLY #53 (print)</li>
+</ul></li>
 </ul>
-<p>I have presented on some of these word-gyms (and their attendant slogan: “Make writing harder!”) at venues including:</p>
+<p>I have presented on some of these word-gyms (and their attendant
+slogan: “Make writing harder!”) at venues including:</p>
 <ul>
+<li>“Machine as Human/Human as Machine” (symposium at Iowa State,
+2024)</li>
 <li>“AI FUTURES” (roundtable via Critical AI @ Rutgers, 2023)</li>
 <li>Ammerman Symposium 2022</li>
-<li>“The Anxiety of the Computational” (symposium at the Santa Fe Institute, 2022)</li>
+<li>“The Anxiety of the Computational” (symposium at the Santa Fe
+Institute, 2022)</li>
 </ul>
 </div></body>
 </html>
