--- a/salon.html
+++ b/salon.html
@@ -8,10 +8,15 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="false" />
@@ -26,15 +31,37 @@
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
-<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes*</a></h5>
+<h5 id="salon-des-fantômes"><a href="salon.html">Salon des
+Fantômes*</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
-<h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
+<h5 id="selected-publications"><a href="index.html">Selected
+Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><a href="https://asterismbooks.com/product/salon-des-fantomes" target="_blank"><em>Salon des Fantômes; or, Streptohormetic Prompt Engineering for the Production of a Jagged Noetic Substrate</em> (Inside the Castle 2024)</a> is a book-length record a five-day philosophical and artistic salon in which I was the only human attendee, the others being over twenty AI-fabricated interlocutors (an architect from Soviet-era Riga, an anthropomorphic and monosyllabic mountain, etc.). In order to make these characters less boring and more worth talking to, I assailed them with what I call “streptohormetic prompt engineering”—randomly-generated commands (Your reply must use the word “cathexis.”), randomly-generated questions (What’s better—Jarman’s “Blue” or Emin’s “My Bed”?), text-transforming potions, and other linguistic perturbations and stressors.</p>
-<p>A salon is a success if its guests are more insightful together than they would have been apart. Did this virtual salon enable me to grow any prizable throught-crystals? Or did my interlocutors lure me into LLM-like anodyne stupidity? These are empirical questions, and <em>Salon des Fantômes</em> is where I have collected some data necessary to answer them.</p>
-<p>This salon is another example of what I call a <a href="progym.html">“word-gym”</a>.</p>
-<p>Code available <a href="https://github.com/kbooten/salon_des_fantomes/tree/main" target="_blank">here</a>.</p>
+<p><a href="https://asterismbooks.com/product/salon-des-fantomes"
+target="_blank"><em>Salon des Fantômes; or, Streptohormetic Prompt
+Engineering for the Production of a Jagged Noetic Substrate</em> (Inside
+the Castle 2024)</a> is a book-length record a five-day philosophical
+and artistic salon in which I was the only human attendee, the others
+being over twenty AI-fabricated interlocutors (an architect from
+Soviet-era Riga, an anthropomorphic and monosyllabic mountain, etc.). In
+order to make these characters less boring and more worth talking to, I
+assailed them with what I call “streptohormetic prompt
+engineering”—randomly-generated commands (Your reply must use the word
+“cathexis.”), randomly-generated questions (What’s better—Jarman’s
+“Blue” or Emin’s “My Bed”?), text-transforming potions, and other
+linguistic perturbations and stressors.</p>
+<p>A salon is a success if its guests are more insightful together than
+they would have been apart. Did this virtual salon enable me to grow any
+prizable throught-crystals? Or did my interlocutors lure me into
+LLM-like anodyne stupidity? These are empirical questions, and <em>Salon
+des Fantômes</em> is where I have collected some data necessary to
+answer them.</p>
+<p>This salon is another example of what I call a <a
+href="progym.html">“word-gym”</a>.</p>
+<p>Code available <a
+href="https://github.com/kbooten/salon_des_fantomes/tree/main"
+target="_blank">here</a>.</p>
 </div></body>
 </html>
