--- a/topray.html
+++ b/topray.html
@@ -8,10 +8,15 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="false" />
@@ -26,20 +31,32 @@
 <hr />
 <h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
 <h5 id="word-gyms"><a href="progym.html">Word-Gyms</a></h5>
-<h5 id="salon-des-fantômes"><a href="salon.html">Salon des Fantômes</a></h5>
+<h5 id="salon-des-fantômes"><a href="salon.html">Salon des
+Fantômes</a></h5>
 <!-- ##### [To Pray Without Ceasing*](topray.html)
  -->
-<h5 id="selected-publications"><a href="index.html">Selected Publications</a></h5>
+<h5 id="selected-publications"><a href="index.html">Selected
+Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>To Pray Without Ceasing is a text generation project about caring for strangers online. The algorithmic system listens for expressions of need on Twitter (e.g. “I really need somebody to talk to”) and generates empathetic prayers specific to these needs. Evoking the “Liturgy of the Hours,” the system prays in different ways at specific times of the day. Unlike humans, it never grows weary of paying attention to others.</p>
-<p>I completed To Pray Without Ceasing while the Fall 2020 poet-in-residence at Nokturno.fi.</p>
+<p>To Pray Without Ceasing is a text generation project about caring for
+strangers online. The algorithmic system listens for expressions of need
+on Twitter (e.g. “I really need somebody to talk to”) and generates
+empathetic prayers specific to these needs. Evoking the “Liturgy of the
+Hours,” the system prays in different ways at specific times of the day.
+Unlike humans, it never grows weary of paying attention to others.</p>
+<p>I completed To Pray Without Ceasing while the Fall 2020
+poet-in-residence at Nokturno.fi.</p>
 <ul>
-<li><a href="https://www.topraywithoutceasing.com/" target="_blank">To Pray Without Ceasing</a></li>
-<li><a href="https://github.com/kbooten/topraywithoutceasing" target="_blank">Code</a></li>
-<li><a href="http://residence6.nokturno.fi/" target="_blank">Residence diary</a></li>
+<li><a href="https://www.topraywithoutceasing.com/" target="_blank">To
+Pray Without Ceasing</a></li>
+<li><a href="https://github.com/kbooten/topraywithoutceasing"
+target="_blank">Code</a></li>
+<li><a href="http://residence6.nokturno.fi/" target="_blank">Residence
+diary</a></li>
 <li><a href="https://2021.xcoax.org/kbo/">xCoAx 2021</a></li>
-<li><a href="https://eliterature.org/elo2021/posthuman/" target="_blank">ELO/SLSA 2021 “Posthuman” Exhibition</a></li>
+<li><a href="https://eliterature.org/elo2021/posthuman/"
+target="_blank">ELO/SLSA 2021 “Posthuman” Exhibition</a></li>
 </ul>
 </div></body>
 </html>
