--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@ Publications*</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <ul>
+<li><p><a href="https://badquar.to/publications/our_generation.html"
+target="_blank">“Leaping Loom,” a small computer-generated poetic form,
+in OUR GENERATION (BAD QUARTO)</a></p>
+<ul>
+<li><a href="resources/leaping_loom.txt" target="_blank">code</a></li>
+</ul></li>
 <li><p>Two examples of <a href="noohacking.html">noöhacking</a> in TAPER
 #12 (TOOLS)</p>
 <ul>
