--- a/noohacking.html
+++ b/noohacking.html
@@ -39,12 +39,13 @@ Fantômes</a></h5>
 Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p><em>Noöhacking</em> is the title of my current research program. I
-use this term for ways that artists and everyday digital media users
-build and repurpose algorithmic tools in order to take care of their own
-minds/spirits, an especially challenging and important task amidst a
-digital milieu that seems designed to make us alienated, unintelligent,
-and miserable.</p>
+<p><em>Noöhacking</em><a href="#fn1" class="footnote-ref" id="fnref1"
+role="doc-noteref"><sup>1</sup></a> is the title of my current research
+program. I use this term for ways that artists and everyday digital
+media users build and repurpose algorithmic tools in order to take care
+of their own minds/spirits, an especially challenging and important task
+amidst a digital milieu that seems designed to make us alienated,
+unintelligent, and miserable.</p>
 <p>My current book-in-progress—also called <em>Noöhacking</em>—describes
 some of the key technologies through which an individual can engage in
 this practice, including browser extensions, social media bots,
@@ -56,5 +57,14 @@ try to make writing (beneficially) harder</a> and my <a
 href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/"
 target="_blank">browser extension that attempts to “re-hijack” my
 scattered attention</a>.</p>
+<section id="footnotes" class="footnotes footnotes-end-of-document"
+role="doc-endnotes">
+<hr />
+<ol>
+<li id="fn1"><p>“Noohacking” is fine too, but I prefer the pips over the
+second “o”.<a href="#fnref1" class="footnote-back"
+role="doc-backlink">↩︎</a></p></li>
+</ol>
+</section>
 </div></body>
 </html>
