--- a/progym.html
+++ b/progym.html
@@ -40,8 +40,8 @@ Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
 <p><em>Progymnasmata</em> were classical rhetorical exercises meant to
-train the mind just as physical exercises train the body.
-<em>Word-Gyms</em> is a project that investigates the ways that Natural
+train the mind just as physical exercises train the body. <em>Word
+Gyms</em> is an ongoing project that investigates the ways that Natural
 Language Processing can be integrated into tools and games that re-train
 linguistic faculties. It is an example of Digital Humanities research
 for the development of “noötechnics” (Bernard Stiegler).</p>
@@ -103,7 +103,7 @@ Mirror</a>
 </ul></li>
 </ul>
 <p><br></p>
-<p>I have presented on some of these word-gyms (and their attendant
+<p>I have presented on some of these word gyms (and their attendant
 slogan: “Make writing harder!”) at venues including:</p>
 <ul>
 <li>“Machine as Human/Human as Machine” (symposium at Iowa State,
