--- a/ensemble.html
+++ b/ensemble.html
@@ -40,15 +40,15 @@ Fantômes</a></h5>
 Publications</a></h5>
 <h5 id="about"><a href="about.html">About</a></h5>
 <hr />
-<p>With Katy Ilonka Gero, I edit <a
-href="https://www.ensemblepark.com/"><em>Ensemble Park</em></a><em>: A
-Journal of Human+Computer Writing</em>. We intend to document but also
-respond critically to the rise of Large Language Models (LLMs) and the
-ways that contemporary “AI” are changing what it means to write.
-<em>Ensemble Park</em> emphasizes risky and unexpected entanglements
-between human and machine intelligences, including LLMs as well as
-other—older or simply different—algorithmic systems for the production
-and manipulation of natural language. It is both a literary journal and
-a journal of rogue human-computer interaction research.</p>
+<p>With Katy Ilonka Gero, I edit <a href="https://www.ensemblepark.com/"
+target="_blank"><em>Ensemble Park</em></a><em>: A Journal of
+Human+Computer Writing</em>. We intend to document but also respond
+critically to the rise of Large Language Models (LLMs) and the ways that
+contemporary “AI” are changing what it means to write. <em>Ensemble
+Park</em> emphasizes risky and unexpected entanglements between human
+and machine intelligences, including LLMs as well as other—older or
+simply different—algorithmic systems for the production and manipulation
+of natural language. It is both a literary journal and a journal of
+rogue human-computer interaction research.</p>
 </div></body>
 </html>
